# controllers/Article.js
@@ -1,12 +1,53 @@
-
 const Article = require('../models/Article.js');
 
 async function getArticles(request, response) {
+
+    const {
+        limit,
+        skip
+    } = request.query
+
     try {
-        const articles = await Article.find();
+        const articles = await Article.find().limit(limit).skip(skip);
         response.status(200).json(articles);
     } catch (err) {
-        response.status(500).json({ error: err.message });
+        response.status(500).json({
+            error: err.message
+        });
+    }
+}
+
+async function getArticlesCount(request, response) {
+    try {
+        const count = await Article.count();
+        response.status(200).json({
+            count: count
+        });
+    } catch (err) {
+        response.status(500).json({
+            error: err.message
+        });
+    }
+}
+
+async function getArticleById(request, response) {
+    const id = request.params.id;
+
+    try {
+        const article = await Article.findById(id);
+
+        if (article == null) {
+            response.status(400).json({
+                error: 'Article not found'
+            });
+            return;
+        }
+        response.status(200).json(article)
+
+    } catch (err) {
+        response.status(500).json({
+            error: err
+        })
     }
 }
 
@@ -42,8 +83,39 @@ async function postArticle(request, response) {
         response.status(201).json(newArticle);
 
     } catch (err) {
-        response.status(500).json({ error: err.message });
+        response.status(500).json({
+            error: err.message
+        });
     }
 }
 
-module.exports = { getArticles, postArticle };
+async function deleteArticle(request, response) {
+    const id = request.params.id;
+
+    try {
+        const article = await Article.findByIdAndRemove(id);
+
+        if (article == null) {
+            response.status(400).json({
+                error: 'Article not found'
+            });
+            return;
+        }
+        response.status(200).json({
+            message: 'Article deleted successfully'
+        });
+
+    } catch (err) {
+        response.status(500).json({
+            error: err
+        })
+    }
+}
+
+module.exports = {
+    getArticles,
+    postArticle,
+    getArticlesCount,
+    getArticleById,
+    deleteArticle
+};
